fix scroll issue on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,11 +10,10 @@ body {
   color: $theme-black;
   font-family: $font-primary;
   line-height: 1.3;
-  &.no-scroll {
-    overflow-y: hidden;
-  }
 }
-
+.no-scroll {
+  overflow-y: hidden;
+}
 a {
   color: $theme-black;
   text-decoration: none;
